[gd_scene load_steps=5 format=3 uid="uid://dqwmqnjgo31ny"]

[ext_resource type="Script" uid="uid://clwcufeowemlk" path="res://scenes/ground/ground.gd" id="1_rrkwn"]
[ext_resource type="Texture2D" uid="uid://cvjp578yskg1i" path="res://assets/sprites/groundSnow.png" id="2_xmv3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrkwn"]
size = Vector2(808, 71.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmv3o"]
size = Vector2(808, 71.5)

[node name="Ground" type="Node2D"]
script = ExtResource("1_rrkwn")

[node name="ground1" type="Area2D" parent="."]
position = Vector2(404, 0)

[node name="Sprite2D" type="Sprite2D" parent="ground1"]
unique_name_in_owner = true
texture = ExtResource("2_xmv3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground1"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_rrkwn")

[node name="ground2" type="Area2D" parent="."]
position = Vector2(1212, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground2"]
shape = SubResource("RectangleShape2D_xmv3o")
debug_color = Color(0.889827, 0.249964, 0.535409, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="ground2"]
texture = ExtResource("2_xmv3o")

[connection signal="body_entered" from="ground1" to="." method="_on_ground_body_entered"]
[connection signal="body_entered" from="ground2" to="." method="_on_ground_body_entered"]
